# SpikeProSARS-CoV-2

./: CMakeLists.txt  README.md  SpikePro.cpp
edlib/: CMakeLists.txt
